update analisi + monitor api requests

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 103,
    "id": "772cee29",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from shapely import LineString, MultiLineString\n",
+    "import json\n",
+    "from shapely import LineString, MultiLineString, Point\n",
     "from shapely.ops import nearest_points\n",
     "\n",
     "import geopandas as gpd\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "9d3a6cf8",
    "metadata": {},
    "outputs": [],
@@ -36,37 +37,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18c93209",
+   "metadata": {},
+   "source": [
+    "Carico le api key da file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "f12793e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY_GOOGLE = \"AIzaSyDpP7H4aWmK5ZFI0vBqTkcovlL2LN1C8ck\""
+    "PATH_API_KEY = \"../Google_api_credentials/api_key_maps.json\"\n",
+    "with open(PATH_API_KEY) as file: \n",
+    "    API_KEY_GOOGLE = json.load(file)[\"key\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 45,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_ciclabili = gpd.read_file(PATH_CICLABILI_CLEAN).to_crs(\"EPSG:32632\")\n",
-    "gdf_bikemi = gpd.read_file(PATH_BIKEMI_CLEAN).to_crs(\"EPSG:32632\")\n",
-    "gdf_parchi = gpd.read_file(PATH_PARCHI_CLEAN).to_crs(\"EPSG:32632\")\n",
-    "gdf_biblioteche = gpd.read_file(PATH_BIBLIOTECHE_CLEAN).to_crs(\"EPSG:32632\")\n",
-    "gdf_impianti_sportivi = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN).to_crs(\"EPSG:32632\")\n",
-    "gdf_fontane = gpd.read_file(PATH_FONTANE_CLEAN).to_crs(\"EPSG:32632\")\n",
-    "gdf_inquinamento = gpd.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN).to_crs(\"EPSG:32632\")"
+    "gdf_ciclabili = gpd.read_file(PATH_CICLABILI_CLEAN)\n",
+    "gdf_bikemi = gpd.read_file(PATH_BIKEMI_CLEAN)\n",
+    "gdf_parchi = gpd.read_file(PATH_PARCHI_CLEAN)\n",
+    "gdf_biblioteche = gpd.read_file(PATH_BIBLIOTECHE_CLEAN)\n",
+    "gdf_impianti_sportivi = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN)\n",
+    "gdf_fontane = gpd.read_file(PATH_FONTANE_CLEAN)\n",
+    "gdf_inquinamento = gpd.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eac173c6",
+   "id": "0980d20b",
    "metadata": {},
    "source": [
-    "## STEP 1"
+    "Per eseguire operazioni di misurazione di distanze è meglio utilizzare crs metrico. Visto che i dataframe sono salvati con crs di tipo angolare (lat e long), li dobbiamo prima convertire."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "47c2aeeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CRS_GRAD = \"EPSG:4326\"  # Lat-Long\n",
+    "CRS_METR = \"EPSG:32632\" # Metri"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "169e703c",
+   "metadata": {},
+   "source": [
+    "## Parchi Isolati"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "74892a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili = gdf_ciclabili.to_crs(CRS_METR)\n",
+    "gdf_parchi = gdf_parchi.to_crs(CRS_METR)"
    ]
   },
   {
@@ -82,21 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "93122f21",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_ciclabili_buffer = gdf_ciclabili.buffer(200).union_all()\n",
-    "parchi_non_vicini = gdf_parchi[~gdf_parchi.geometry.intersects(gdf_ciclabili_buffer)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e43c5e1b",
-   "metadata": {},
-   "source": [
-    "## STEP 2"
+    "parchi_non_vicini = gdf_parchi[~gdf_parchi.geometry.intersects(gdf_ciclabili_buffer)]\n",
+    "print(len(parchi_non_vicini))"
    ]
   },
   {
@@ -109,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "8f2a8b14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_ciclabili_unite = gpd.GeoDataFrame([gdf_ciclabili.union_all()], columns=[\"geometry\"], crs=\"EPSG:32632\")"
+    "gdf_ciclabili_unite = gpd.GeoDataFrame([gdf_ciclabili.union_all()], columns=[\"geometry\"], crs=CRS_METR)"
    ]
   },
   {
@@ -127,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "25312e4f",
    "metadata": {},
    "outputs": [],
@@ -147,15 +181,7 @@
     "    })\n",
     "\n",
     "# Crea GeoDataFrame del risultato\n",
-    "df_risultati = gpd.GeoDataFrame(risultati, geometry='geometry', crs=\"EPSG:32632\").to_crs('EPSG:4326')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cefe3a2f",
-   "metadata": {},
-   "source": [
-    "## STEP 3"
+    "df_risultati = gpd.GeoDataFrame(risultati, geometry='geometry', crs=CRS_METR)"
    ]
   },
   {
@@ -168,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "id": "a711d508",
    "metadata": {},
    "outputs": [],
@@ -211,11 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "bb21e9b3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_risultati = df_risultati.to_crs(CRS_GRAD)    # Google accetta lat-long\n",
     "df_risultati[\"geometry\"] = df_risultati[\"geometry\"].apply(\n",
     "    lambda x: richiedi_percorso_goole(origin=x.geoms[0].coords[0],\n",
     "                                      dest=x.geoms[0].coords[1],\n",
@@ -235,19 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "71b07026",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_risultati = df_risultati.to_crs(\"EPSG:32632\")\n",
+    "df_risultati = df_risultati.to_crs(CRS_METR)    # Confronto geometrico usiamo metri\n",
     "\n",
-    "gpf_percorsi_uniti = gpd.GeoDataFrame([df_risultati.union_all()], columns=[\"geometry\"])\n",
-    "gpf_ciclabili_uniti_con_buffer = gpd.GeoDataFrame([gdf_ciclabili.buffer(10).union_all()], columns=[\"geometry\"])\n",
+    "gpf_ciclabili_uniti_con_buffer = gdf_ciclabili.buffer(10).union_all()\n",
     "\n",
-    "gpf_percorsi_uniti['geometry'] = gpf_percorsi_uniti[\"geometry\"].apply(\n",
-    "    lambda geom: geom.difference(gpf_ciclabili_uniti_con_buffer.geometry)\n",
-    "    )"
+    "df_risultati['geometry'] = df_risultati[\"geometry\"].apply(\n",
+    "    lambda geom: geom.difference(gpf_ciclabili_uniti_con_buffer))\n",
+    "\n",
+    "gdf_parchi_uniti = gdf_parchi.buffer(0.1).union_all()   # buffer minimo dovrebbe aiutare la precisione della difference\n",
+    "df_risultati['geometry'] = df_risultati[\"geometry\"].apply(\n",
+    "    lambda geom: geom.difference(gdf_parchi_uniti))"
    ]
   },
   {
@@ -255,17 +284,105 @@
    "id": "24914a2c",
    "metadata": {},
    "source": [
-    "Ora riconvertiamo in sistema Latitudine, Longitudine: 'EPSG:4326' e salviamo il risultato su Clean"
+    "Salviamo il risultato su Clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 120,
    "id": "5719d0bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpf_percorsi_uniti.set_crs(\"EPSG:32632\").to_crs('EPSG:4326').to_file(PATH_ANALISI_TEST_CLEAN)"
+    "df_risultati.set_crs(CRS_METR).to_crs(CRS_GRAD).to_file(PATH_ANALISI_TEST_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fe68e31",
+   "metadata": {},
+   "source": [
+    "# Google API Monitor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "532256fb",
+   "metadata": {},
+   "source": [
+    "Da usare ogni tanto per monitorare le chiamate api consumate.  \n",
+    "Difficilmente supereremo le 10k chiamate però non si sa mai.\n",
+    "\n",
+    "N.B: Anche questa operazione ha un numero di chiamate limitate anche se non ho capito qual é ma facendola ogni tanto non mi preoccupo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c33b08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import monitoring_v3\n",
+    "from datetime import datetime, timezone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2eacbe88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_SERVICE_ACCOUNT = \"../Google_api_credentials/service_account.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fd26255",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Totale chiamate Maps API questo mese: 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "client = monitoring_v3.MetricServiceClient.from_service_account_file(PATH_SERVICE_ACCOUNT)\n",
+    "project_id = \"progetto-bike-aida\"\n",
+    "project_name = f\"projects/{project_id}\"\n",
+    "\n",
+    "start = datetime(2025, 7, 27)   # Data inizio utilizzo delle api\n",
+    "end = datetime.now(timezone.utc)\n",
+    "\n",
+    "interval = monitoring_v3.TimeInterval({\n",
+    "    \"start_time\": {\"seconds\": int(start.timestamp())},\n",
+    "    \"end_time\": {\"seconds\": int(end.timestamp())},\n",
+    "})\n",
+    "\n",
+    "results = client.list_time_series(\n",
+    "    request={\n",
+    "        \"name\": project_name,\n",
+    "        \"filter\": 'metric.type = \"maps.googleapis.com/service/v2/request_count\"',\n",
+    "        \"interval\": interval,\n",
+    "        \"aggregation\": {\n",
+    "            \"alignment_period\": {\"seconds\": 86400},\n",
+    "            \"per_series_aligner\": monitoring_v3.Aggregation.Aligner.ALIGN_SUM,\n",
+    "        },\n",
+    "        \"view\": monitoring_v3.ListTimeSeriesRequest.TimeSeriesView.FULL,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "total = 0\n",
+    "for time_series in results:\n",
+    "    for point in time_series.points:\n",
+    "        total += point.value.int64_value\n",
+    "\n",
+    "print(f\"Totale chiamate Maps API: {total}\")"
    ]
   }
  ],
