update ciclabili e analisi

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "id": "772cee29",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import requests\n",
     "import json\n",
     "from shapely import LineString, MultiLineString, Point\n",
-    "from shapely.ops import nearest_points\n",
+    "from shapely.ops import nearest_points, unary_union\n",
     "\n",
     "import geopandas as gpd\n",
     "import polyline\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "9d3a6cf8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f12793e2",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "id": "47c2aeeb",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "id": "74892a33",
    "metadata": {},
    "outputs": [],
@@ -123,10 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "93122f21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "gdf_ciclabili_buffer = gdf_ciclabili.buffer(200).union_all()\n",
     "parchi_non_vicini = gdf_parchi[~gdf_parchi.geometry.intersects(gdf_ciclabili_buffer)]\n",
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "8f2a8b14",
    "metadata": {},
    "outputs": [],
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "25312e4f",
    "metadata": {},
    "outputs": [],
@@ -177,7 +185,7 @@
     "    risultati.append({\n",
     "        'id_parco': parco.get('PARCO', idx_parco),\n",
     "        'distanza_minima': punto_parco.distance(punto_ciclabile),\n",
-    "        'geometry': MultiLineString([LineString([punto_parco, punto_ciclabile])])\n",
+    "        'geometry': LineString([punto_parco, punto_ciclabile])\n",
     "    })\n",
     "\n",
     "# Crea GeoDataFrame del risultato\n",
@@ -194,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "id": "a711d508",
    "metadata": {},
    "outputs": [],
@@ -224,7 +232,7 @@
     "    risposta_json = requests.get(url_API_directions).json()\n",
     "    coordinates = polyline.decode(risposta_json['routes'][0]['overview_polyline']['points'])\n",
     "    coordinates = [[x[1], x[0]] for x in coordinates]\n",
-    "    return MultiLineString([LineString(coordinates)])"
+    "    return LineString(coordinates)"
    ]
   },
   {
@@ -237,15 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "bb21e9b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_risultati = df_risultati.to_crs(CRS_GRAD)    # Google accetta lat-long\n",
     "df_risultati[\"geometry\"] = df_risultati[\"geometry\"].apply(\n",
-    "    lambda x: richiedi_percorso_goole(origin=x.geoms[0].coords[0],\n",
-    "                                      dest=x.geoms[0].coords[1],\n",
+    "    lambda x: richiedi_percorso_goole(origin=x.coords[0],\n",
+    "                                      dest=x.coords[1],\n",
     "                                      api_key=API_KEY_GOOGLE,\n",
     "                                      mode=\"bicycling\"))"
    ]
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "71b07026",
    "metadata": {},
    "outputs": [],
@@ -276,7 +284,11 @@
     "\n",
     "gdf_parchi_uniti = gdf_parchi.buffer(0.1).union_all()   # buffer minimo dovrebbe aiutare la precisione della difference\n",
     "df_risultati['geometry'] = df_risultati[\"geometry\"].apply(\n",
-    "    lambda geom: geom.difference(gdf_parchi_uniti))"
+    "    lambda geom: geom.difference(gdf_parchi_uniti))\n",
+    "\n",
+    "# Aggiorno anche la lunghezza della ciclabile\n",
+    "df_risultati['lunghezza'] = df_risultati['geometry'].apply(lambda x: x.length)\n",
+    "df_risultati = df_risultati.drop([\"distanza_minima\"], axis=1)"
    ]
   },
   {
@@ -289,13 +301,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 45,
    "id": "5719d0bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_risultati.set_crs(CRS_METR).to_crs(CRS_GRAD).to_file(PATH_ANALISI_TEST_CLEAN)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcd42946",
+   "metadata": {},
+   "source": [
+    "# Riprovo a connettere le ciclabili distanti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c08b714f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
