--- a/Scripts/Info_bici.ipynb
+++ b/Scripts/Info_bici.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "76a32828",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from shapely import Point\n",
+    "from shapely import MultiLineString, LineString, Point\n",
     "\n",
     "import geopandas as gpd\n",
     "\n",
@@ -41,21 +41,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2b615b5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_CICLABILI_RAW, 'r') as file:\n",
-    "    geojson = json.load(file)"
+    "gdf_ciclabili_raw = gpd.read_file(PATH_CICLABILI_RAW)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8bc16a63",
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "924458a6",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Nessuna modifica necessaria al momento"
+    "def group_by_id_via_geometry(geos):\n",
+    "    new_geo = []\n",
+    "    for geo in geos:\n",
+    "        new_geo.append(geo)\n",
+    "    return MultiLineString(new_geo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "656286c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili_staging = gdf_ciclabili_raw.copy()\n",
+    "\n",
+    "# Convertiamo alcuni tipi\n",
+    "gdf_ciclabili_staging[\"geometry\"] = gdf_ciclabili_staging[\"geometry\"].apply(lambda x: x.geoms[0])\n",
+    "gdf_ciclabili_staging[\"fine_lavor\"] = gdf_ciclabili_staging[\"fine_lavor\"].astype(int)\n",
+    "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
+    "\n",
+    "\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"gerarchia\"], axis=1)\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.groupby(\"id_via\").agg({\n",
+    "    \"tipologia\": lambda x: str(set(x)),\n",
+    "    \"fine_lavor\": \"max\",\n",
+    "    \"lunghezza\": \"sum\",\n",
+    "    \"geometry\": group_by_id_via_geometry\n",
+    "})\n",
+    "gdf_ciclabili_staging = gpd.GeoDataFrame(gdf_ciclabili_staging, geometry=\"geometry\")"
    ]
   },
   {
@@ -68,13 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6d66511e",
+   "execution_count": 59,
+   "id": "5a0ea038",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "  write(\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(PATH_CICLABILI_CLEAN, 'w') as file:\n",
-    "    json.dump(geojson, file, indent=4)"
+    "gdf_ciclabili_clean = gdf_ciclabili_staging.copy()\n",
+    "gdf_ciclabili_clean.to_file(PATH_CICLABILI_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
