update bici e analisi

--- a/Scripts/Info_bici.ipynb
+++ b/Scripts/Info_bici.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "656286c9",
    "metadata": {},
    "outputs": [],
@@ -78,8 +78,8 @@
     "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
     "\n",
     "\n",
-    "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"gerarchia\"], axis=1)\n",
-    "gdf_ciclabili_staging = gdf_ciclabili_staging.groupby(\"id_via\").agg({\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.groupby(\"anagrafica\").agg({\n",
     "    \"tipologia\": lambda x: str(set(x)),\n",
     "    \"fine_lavor\": \"max\",\n",
     "    \"lunghezza\": \"sum\",\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "5a0ea038",
    "metadata": {},
    "outputs": [
