--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "772cee29",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import requests\n",
     "import json\n",
     "from shapely import LineString, MultiLineString, Point\n",
-    "from shapely.ops import nearest_points, unary_union\n",
+    "from shapely.ops import nearest_points\n",
     "\n",
     "import geopandas as gpd\n",
     "import polyline\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 111,
    "id": "9d3a6cf8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 112,
    "id": "f12793e2",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 113,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "id": "47c2aeeb",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 115,
    "id": "74892a33",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 116,
    "id": "93122f21",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 117,
    "id": "8f2a8b14",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 118,
    "id": "25312e4f",
    "metadata": {},
    "outputs": [],
@@ -202,12 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 119,
    "id": "a711d508",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def richiedi_percorso_goole(origin:tuple[float, float], dest:tuple[float, float], api_key:str, mode:str = \"bicycling\"):\n",
+    "def richiedi_percorso_google(origin:tuple[float, float], dest:tuple[float, float], api_key:str, mode:str = \"bicycling\"):\n",
     "    \"\"\"\n",
     "    Restituisce una Multylinestring del percorso da punto A (origin) a punto B (dest).\n",
     "\n",
@@ -245,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 120,
    "id": "bb21e9b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_risultati = df_risultati.to_crs(CRS_GRAD)    # Google accetta lat-long\n",
     "df_risultati[\"geometry\"] = df_risultati[\"geometry\"].apply(\n",
-    "    lambda x: richiedi_percorso_goole(origin=x.coords[0],\n",
+    "    lambda x: richiedi_percorso_google(origin=x.coords[0],\n",
     "                                      dest=x.coords[1],\n",
     "                                      api_key=API_KEY_GOOGLE,\n",
     "                                      mode=\"bicycling\"))"
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 121,
    "id": "71b07026",
    "metadata": {},
    "outputs": [],
@@ -301,12 +301,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 122,
    "id": "5719d0bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_risultati.set_crs(CRS_METR).to_crs(CRS_GRAD).to_file(PATH_ANALISI_TEST_CLEAN)"
+    "df_risultati.set_crs(CRS_METR).to_crs(CRS_GRAD).to_file(PATH_ANALISI_TEST_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
@@ -318,12 +318,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad1dd18b",
+   "metadata": {},
+   "source": [
+    "Funzione che data una Line trova la direzione ed estende la linea su una distanza in metri.  \n",
+    "In aggiunta una funzione a cui puoi dare una multilinestring che estenderà tutte le sue line. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "835b8586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shapely.geometry import LineString, MultiLineString, Point\n",
+    "import numpy as np\n",
+    "\n",
+    "def extend_line_ends(line, distance):\n",
+    "    if line.geom_type != 'LineString' or len(line.coords) < 2:\n",
+    "        return line  # Non si può estendere\n",
+    "    \n",
+    "    coords = list(line.coords)\n",
+    "\n",
+    "    # Calcola direzione iniziale\n",
+    "    x0, y0 = coords[0]\n",
+    "    x1, y1 = coords[1]\n",
+    "    dx0, dy0 = x1 - x0, y1 - y0\n",
+    "    norm0 = np.hypot(dx0, dy0)\n",
+    "    x_start = x0 - (dx0 / norm0) * distance\n",
+    "    y_start = y0 - (dy0 / norm0) * distance\n",
+    "\n",
+    "    # Calcola direzione finale\n",
+    "    xN_1, yN_1 = coords[-2]\n",
+    "    xN, yN = coords[-1]\n",
+    "    dx1, dy1 = xN - xN_1, yN - yN_1\n",
+    "    norm1 = np.hypot(dx1, dy1)\n",
+    "    x_end = xN + (dx1 / norm1) * distance\n",
+    "    y_end = yN + (dy1 / norm1) * distance\n",
+    "\n",
+    "    new_coords = [(x_start, y_start)] + coords[1:-1] + [(x_end, y_end)]\n",
+    "    return LineString(new_coords)\n",
+    "\n",
+    "def extend_multiline(multiline, distance):\n",
+    "    if multiline.geom_type == \"MultiLineString\":\n",
+    "        return MultiLineString([extend_line_ends(line, distance) for line in multiline.geoms])\n",
+    "    elif multiline.geom_type == \"LineString\":\n",
+    "        return extend_line_ends(multiline, distance)\n",
+    "    else:\n",
+    "        return multiline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c08b714f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_24136\\2548268801.py:23: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  x_end = xN + (dx1 / norm1) * distance\n",
+      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_24136\\2548268801.py:24: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  y_end = yN + (dy1 / norm1) * distance\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\shapely\\creation.py:218: RuntimeWarning: invalid value encountered in linestrings\n",
+      "  return lib.linestrings(coords, np.intc(handle_nan), out=out, **kwargs)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "property 'geometry' of 'GeoSeries' object has no setter",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m   6358\u001b[39m                         stacklevel=find_stack_level(),\n\u001b[32m   6359\u001b[39m                     )\n\u001b[32m-> \u001b[39m\u001b[32m6360\u001b[39m                 object.__setattr__(self, name, value)\n",
+      "\u001b[31mAttributeError\u001b[39m: property 'geometry' of 'GeoSeries' object has no setter",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[32m~\\AppData\\Local\\Temp\\ipykernel_24136\\3393665227.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m gdf_ciclabili_allungate = gdf_ciclabili.copy()\n\u001b[32m      2\u001b[39m gdf_ciclabili_allungate = gdf_ciclabili_allungate[\u001b[33m\"geometry\"\u001b[39m].apply(\u001b[38;5;28;01mlambda\u001b[39;00m x: extend_multiline(x, \u001b[32m200\u001b[39m))\n\u001b[32m      3\u001b[39m \n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m gdf_ciclabili_allungate.geometry = gdf_ciclabili_allungate.buffer(\u001b[32m10\u001b[39m)\n\u001b[32m      5\u001b[39m \n\u001b[32m      6\u001b[39m coppie_ciclabili = []\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row_allungate \u001b[38;5;28;01min\u001b[39;00m gdf_ciclabili_buffer_allungate.iterrows():\n",
+      "\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m   6356\u001b[39m                         \u001b[33m\"https://pandas.pydata.org/pandas-docs/\"\u001b[39m\n\u001b[32m   6357\u001b[39m                         \u001b[33m\"stable/indexing.html#attribute-access\"\u001b[39m,\n\u001b[32m   6358\u001b[39m                         stacklevel=find_stack_level(),\n\u001b[32m   6359\u001b[39m                     )\n\u001b[32m-> \u001b[39m\u001b[32m6360\u001b[39m                 object.__setattr__(self, name, value)\n",
+      "\u001b[31mAttributeError\u001b[39m: property 'geometry' of 'GeoSeries' object has no setter"
+     ]
+    }
+   ],
+   "source": [
+    "gdf_ciclabili_allungate = gdf_ciclabili.copy()\n",
+    "gdf_ciclabili_allungate = gdf_ciclabili_allungate[\"geometry\"].apply(lambda x: extend_multiline(x, 200))\n",
+    "\n",
+    "gdf_ciclabili_buffer_allungate = gdf_ciclabili_allungate.buffer(10)\n",
+    "\n",
+    "coppie_ciclabili = []\n",
+    "for row_allungate in gdf_ciclabili_buffer_allungate.iterrows():\n",
+    "    for row_normali in gdf_ciclabili.iterrows():\n",
+    "        intersezione = row_allungate[\"geometry\"].intersects(row_normali[\"geometry\"])\n",
+    "        if intersezione and row_allungate[\"Anagrafica\"] != row_normali[\"Anagrafica\"]:\n",
+    "            coppie_ciclabili.append(\n",
+    "                {\n",
+    "                    \"Anagrafica 1\": row_allungate[\"Anagrafica\"],\n",
+    "                    \"Anagrafica 2\": row_normali[\"Anagrafica\"]\n",
+    "                }\n",
+    "            )\n",
+    "coppie_ciclabili"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a55dcdf2",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gdf_ciclabili_allungate.to_crs(CRS_GRAD).to_file(\"../Data/Clean/Analisi/ciclabili_allungate.geojson\", driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffeb2939",
+   "metadata": {},
+   "source": [
+    "Prossimi passi:\n",
+    "- Aggiungere un leggero buffer alle Multiline delle ciclabili allungate\n",
+    "- Fare ciclabili_buffer_allungate.geometry.apply() e fare l'intersect ma non con l'union delle ciclabili ma per ogni Multiline delle ciclabili normali e segnare la \"denominazione\" delle coppie (che è il nuovo id).\n",
+    "- A questo punto dovrei trovarmi un dataframe delle coppie di ciclabili da unire. Troverò i punti più vicini per ogni coppia (tenendo conto di usare solo il df delle ciclabili normali NON allungate).\n",
+    "- Fare le chiamate api dei percorsi da google maps\n",
+    "- Eliminare le sovrapposizioni con le ciclabili esistenti.\n",
+    "- Per ora questo. Controllare i risultati"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -346,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "58c33b08",
    "metadata": {},
    "outputs": [],
@@ -357,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 96,
    "id": "2eacbe88",
    "metadata": {},
    "outputs": [],
@@ -367,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "6fd26255",
    "metadata": {},
    "outputs": [
@@ -375,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Totale chiamate Maps API questo mese: 35\n"
+      "Totale chiamate Maps API: 106\n"
      ]
     }
    ],
