--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "772cee29",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 70,
    "id": "9d3a6cf8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 71,
    "id": "f12793e2",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 72,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 73,
    "id": "47c2aeeb",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 74,
    "id": "74892a33",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 75,
    "id": "93122f21",
    "metadata": {},
    "outputs": [
@@ -143,24 +143,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8949e0c",
-   "metadata": {},
-   "source": [
-    "Unisco tutte le piste ciclabili in un unica sola.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "id": "8f2a8b14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_ciclabili_unite = gpd.GeoDataFrame([gdf_ciclabili.union_all()], columns=[\"geometry\"], crs=CRS_METR)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b75fc020",
    "metadata": {},
    "source": [
@@ -169,23 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 76,
    "id": "25312e4f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unisco tutte le piste ciclabili in un unica sola.  \n",
+    "gdf_ciclabili_unite = gpd.GeoDataFrame([gdf_ciclabili.union_all()], columns=[\"geometry\"], crs=CRS_METR)\n",
+    "\n",
     "# Lista per raccogliere risultati\n",
     "risultati = []\n",
     "\n",
     "for idx_parco, parco in parchi_non_vicini.iterrows():\n",
     "    # Trova i due punti più vicini tra geometria del parco e del tratto\n",
     "    punto_parco, punto_ciclabile = nearest_points(parco[\"geometry\"], gdf_ciclabili_unite[\"geometry\"][0])\n",
-    "    \n",
+    "    percorso = LineString([punto_parco, punto_ciclabile])\n",
+    "\n",
     "    # Salva risultato\n",
     "    risultati.append({\n",
-    "        'id_parco': parco.get('PARCO', idx_parco),\n",
-    "        'distanza_minima': punto_parco.distance(punto_ciclabile),\n",
-    "        'geometry': LineString([punto_parco, punto_ciclabile])\n",
+    "        'id_parco': parco[\"PARCO\"],\n",
+    "        'distanza': percorso.length,\n",
+    "        'geometry': percorso\n",
     "    })\n",
     "\n",
     "# Crea GeoDataFrame del risultato\n",
@@ -202,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "a711d508",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def richiedi_percorso_google(origin:tuple[float, float], dest:tuple[float, float], api_key:str, mode:str = \"bicycling\"):\n",
+    "def richiedi_percorso_google(origin:tuple[float, float], dest:tuple[float, float], api_key:str, mode:str = \"walking\"):\n",
     "    \"\"\"\n",
     "    Restituisce una Multylinestring del percorso da punto A (origin) a punto B (dest).\n",
     "\n",
@@ -216,7 +202,7 @@
     "        dest (tuple[float, float]): Coordinate punto di arrivo in formato: [Latitudine, Longitudine].\n",
     "        api_key (str): API_KEY di google maps per effettuare la richiesta.\n",
     "        mode (str): Mezzo di trasporto da utilizzare per il calcolo: \"driving\", \"walking\", \"bicycling\", \"transit\".\n",
-    "                    \"bicycling\" verrà utilizzato di deafult.\n",
+    "                    \"walking\" verrà utilizzato di deafult.\n",
     "    Returns:\n",
     "        Multylinestring: Del tipo: [ [Longitudine, Latitudine], [Longitudine, Latitudine] ]. N.B: Sono inverse rispetto\n",
     "                                    al formato dato in input, già pronte per kepler (google le usa al contrario).\n",
@@ -226,7 +212,6 @@
     "    origin_str = f\"{origin[1]},{origin[0]}\"\n",
     "    dest_str = f\"{dest[1]},{dest[0]}\"\n",
     "    parameters = f\"origin={origin_str}&destination={dest_str}&key={api_key}\"\n",
-    "    mode = \"bicycling\"  # Alternative: |    driving  |   walking    |   bicycling  |    transit\n",
     "    url_API_directions = f\"https://maps.googleapis.com/maps/api/directions/{outputFormat}?{parameters}&mode={mode}\"\n",
     "\n",
     "    risposta_json = requests.get(url_API_directions).json()\n",
@@ -245,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 78,
    "id": "bb21e9b3",
    "metadata": {},
    "outputs": [],
@@ -255,7 +240,7 @@
     "    lambda x: richiedi_percorso_google(origin=x.coords[0],\n",
     "                                      dest=x.coords[1],\n",
     "                                      api_key=API_KEY_GOOGLE,\n",
-    "                                      mode=\"bicycling\"))"
+    "                                      mode=\"walking\"))"
    ]
   },
   {
@@ -270,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 79,
    "id": "71b07026",
    "metadata": {},
    "outputs": [],
@@ -287,8 +272,7 @@
     "    lambda geom: geom.difference(gdf_parchi_uniti))\n",
     "\n",
     "# Aggiorno anche la lunghezza della ciclabile\n",
-    "df_risultati['lunghezza'] = df_risultati['geometry'].apply(lambda x: x.length)\n",
-    "df_risultati = df_risultati.drop([\"distanza_minima\"], axis=1)"
+    "df_risultati['lunghezza'] = df_risultati['geometry'].apply(lambda x: x.length)"
    ]
   },
   {
@@ -301,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 80,
    "id": "5719d0bb",
    "metadata": {},
    "outputs": [],
@@ -328,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "id": "835b8586",
    "metadata": {},
    "outputs": [],
@@ -375,36 +359,7 @@
    "execution_count": null,
    "id": "c08b714f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_24136\\2548268801.py:23: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  x_end = xN + (dx1 / norm1) * distance\n",
-      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_24136\\2548268801.py:24: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  y_end = yN + (dy1 / norm1) * distance\n",
-      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\shapely\\creation.py:218: RuntimeWarning: invalid value encountered in linestrings\n",
-      "  return lib.linestrings(coords, np.intc(handle_nan), out=out, **kwargs)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "property 'geometry' of 'GeoSeries' object has no setter",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m   6358\u001b[39m                         stacklevel=find_stack_level(),\n\u001b[32m   6359\u001b[39m                     )\n\u001b[32m-> \u001b[39m\u001b[32m6360\u001b[39m                 object.__setattr__(self, name, value)\n",
-      "\u001b[31mAttributeError\u001b[39m: property 'geometry' of 'GeoSeries' object has no setter",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[32m~\\AppData\\Local\\Temp\\ipykernel_24136\\3393665227.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m gdf_ciclabili_allungate = gdf_ciclabili.copy()\n\u001b[32m      2\u001b[39m gdf_ciclabili_allungate = gdf_ciclabili_allungate[\u001b[33m\"geometry\"\u001b[39m].apply(\u001b[38;5;28;01mlambda\u001b[39;00m x: extend_multiline(x, \u001b[32m200\u001b[39m))\n\u001b[32m      3\u001b[39m \n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m gdf_ciclabili_allungate.geometry = gdf_ciclabili_allungate.buffer(\u001b[32m10\u001b[39m)\n\u001b[32m      5\u001b[39m \n\u001b[32m      6\u001b[39m coppie_ciclabili = []\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row_allungate \u001b[38;5;28;01min\u001b[39;00m gdf_ciclabili_buffer_allungate.iterrows():\n",
-      "\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m   6356\u001b[39m                         \u001b[33m\"https://pandas.pydata.org/pandas-docs/\"\u001b[39m\n\u001b[32m   6357\u001b[39m                         \u001b[33m\"stable/indexing.html#attribute-access\"\u001b[39m,\n\u001b[32m   6358\u001b[39m                         stacklevel=find_stack_level(),\n\u001b[32m   6359\u001b[39m                     )\n\u001b[32m-> \u001b[39m\u001b[32m6360\u001b[39m                 object.__setattr__(self, name, value)\n",
-      "\u001b[31mAttributeError\u001b[39m: property 'geometry' of 'GeoSeries' object has no setter"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_ciclabili_allungate = gdf_ciclabili.copy()\n",
     "gdf_ciclabili_allungate = gdf_ciclabili_allungate[\"geometry\"].apply(lambda x: extend_multiline(x, 200))\n",
@@ -470,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "id": "58c33b08",
    "metadata": {},
    "outputs": [],
@@ -481,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "id": "2eacbe88",
    "metadata": {},
    "outputs": [],
@@ -491,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 36,
    "id": "6fd26255",
    "metadata": {},
    "outputs": [
@@ -499,7 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Totale chiamate Maps API: 106\n"
+      "Totale chiamate Maps API: 218\n"
      ]
     }
    ],
