integrazione teatri e modifica script tramite pandas

--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "from shapely import Point\n",
     "from shapely.geometry import MultiPolygon, Polygon\n",
     "from shapely.ops import unary_union\n",
@@ -562,6 +563,59 @@
    "source": [
     "# Salvo GeoJSON pulito\n",
     "gdf.to_file(PATH_AREE_GIOCO_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "344e18bf",
+   "metadata": {},
+   "source": [
+    "# Teatri\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bba3d530",
+   "metadata": {},
+   "source": [
+    "- Conversione json in geojson aggiungendo geometry a partire da: glongitude e glatitude\n",
+    "- Filtro su \"zona\" != 0 perché equivale a \"chiusi definitavamente\"\n",
+    "- Filtro su \"sottotipo\" mantenendo solo i teatri e auditorium\n",
+    "- Manteniamo solo le colonne utili e rinominiamole"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8ba46c12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "  write(\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = gpd.pd.read_json(PATH_TEATRI_RAW)\n",
+    "df[\"geometry\"] = df.apply(lambda row: Point(row[\"glongitude\"], row[\"glatitude\"]), axis=1)\n",
+    "df = df[df[\"zona\"] != 0]\n",
+    "df = df[df[\"sottotipo\"].str.upper().isin([\"TEATRO\", \"AUDITORIUM\"])]\n",
+    "columns = {\n",
+    "    \"denominaz\": \"nome_teatro\",\n",
+    "    \"sottotipo\": \"sottotipo\",\n",
+    "    \"id\": \"id_teatro\",\n",
+    "    \"zona\": \"municipio\",\n",
+    "    \"glongitude\": \"longitudine\",\n",
+    "    \"glatitude\": \"latitudine\",\n",
+    "    \"geometry\": \"geometry\"\n",
+    "}\n",
+    "df = df[columns.keys()]\n",
+    "df = df.rename(columns=columns).reset_index(drop=True)\n",
+    "gpd.GeoDataFrame(df, geometry=\"geometry\").to_file(PATH_TEATRI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
