Integrazione musei e cinema nel notebook principale

--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "e4ded582",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\Scripts\\my_paths.py:43: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "  PATH_MUSEI_CLEAN = \"..\\Data\\Clean\\Punti_di_interesse\\musei_milano.geojson\"\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from shapely import Point\n",
@@ -616,6 +625,82 @@
     "df = df[columns.keys()]\n",
     "df = df.rename(columns=columns).reset_index(drop=True)\n",
     "gpd.GeoDataFrame(df, geometry=\"geometry\").to_file(PATH_TEATRI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "841b8f7d",
+   "metadata": {},
+   "source": [
+    "# Cinema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e4c3a3f",
+   "metadata": {},
+   "source": [
+    "- Filtriamo solo comune Milano\n",
+    "- Rinominiamo e manteniamo alcune colonne\n",
+    "- Convertiamo in geojson creando la geometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81efae51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = gpd.pd.read_json(PATH_CINEMA_RAW)\n",
+    "\n",
+    "df = df[df['ccomune'] == 'Milano']\n",
+    "df['geometry'] = df.apply(lambda row: Point(row['clongitudine'], row['clatitudine']), axis=1)\n",
+    "\n",
+    "columns = {\n",
+    "    \"canno_inserimento\": \"anno_inserimento\",\n",
+    "    \"cnome\": \"nome\",\n",
+    "    \"clongitudine\": \"longitudine\",\n",
+    "    \"clatitudine\": \"latitudine\",\n",
+    "    \"geometry\": \"geometry\"\n",
+    "}\n",
+    "df = df[columns.keys()]\n",
+    "df = df.rename(columns=columns)\n",
+    "\n",
+    "gpd.GeoDataFrame(df, geometry='geometry', crs='EPSG:4326').to_file(PATH_CINEMA_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6648f2b1",
+   "metadata": {},
+   "source": [
+    "# Musei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ff1a3538",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = gpd.pd.read_json(PATH_MUSEI_RAW)\n",
+    "\n",
+    "df = df[df['ccomune'] == 'Milano']\n",
+    "df['geometry'] = df.apply(lambda row: Point(row['clongitudine'], row['clatitudine']), axis=1)\n",
+    "\n",
+    "columns = {\n",
+    "    \"canno_inserimento\": \"anno_inserimento\",\n",
+    "    \"cnome\": \"nome\",\n",
+    "    \"clongitudine\": \"longitudine\",\n",
+    "    \"clatitudine\": \"latitudine\",\n",
+    "    \"geometry\": \"geometry\"\n",
+    "}\n",
+    "df = df[columns.keys()]\n",
+    "df = df.rename(columns=columns)\n",
+    "\n",
+    "gpd.GeoDataFrame(df, geometry='geometry', crs='EPSG:4326').to_file(PATH_MUSEI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
