--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e4ded582",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\Scripts\\my_paths.py:43: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  PATH_MUSEI_CLEAN = \"..\\Data\\Clean\\Punti_di_interesse\\musei_milano.geojson\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from shapely import Point\n",
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6d4c4779",
    "metadata": {},
    "outputs": [],
@@ -190,6 +181,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a0917ac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def group_descrizione(x):\n",
+    "    x = set(x)\n",
+    "    risposta = \"\"\n",
+    "    for riga in x:\n",
+    "        risposta = risposta + riga.replace(\"Impianti sportivi - \", \"\") + \", \"\n",
+    "    return risposta.strip(\", \")\n",
+    "\n",
+    "def group_geometry(geos):\n",
+    "    new_geos = []\n",
+    "    for geo in geos.geometry:\n",
+    "        for poligon in geo.geoms:\n",
+    "            new_geos.append(poligon)\n",
+    "    return MultiPolygon(new_geos)\n",
+    "\n",
+    "gdf = gdf.groupby(\"località\").agg({\n",
+    "    \"municipio\": \"first\",\n",
+    "    \"anno_inizio\": \"max\",\n",
+    "    \"area_mq\": \"sum\",\n",
+    "    \"descrizione_codice\": group_descrizione,\n",
+    "    \"geometry\": group_geometry\n",
+    "})\n",
+    "gdf = gpd.GeoDataFrame(gdf)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "addcb3b7",
    "metadata": {},
@@ -199,10 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "9f53a865",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "  write(\n"
+     ]
+    }
+   ],
    "source": [
     "gdf.to_file(PATH_IMPIANTI_SPORTIVI_CLEAN, driver=\"GeoJSON\")"
    ]
