--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -596,6 +596,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "42e09b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raggruppo Località e tengo la data inizio più alta\n",
+    "def group_geometry(geos):\n",
+    "    new_geos = []\n",
+    "    for geo in geos.geometry:\n",
+    "        for poligon in geo.geoms:\n",
+    "            new_geos.append(poligon)\n",
+    "    return MultiPolygon(new_geos)\n",
+    "\n",
+    "gdf = gdf.groupby(\"località\").agg({\n",
+    "    \"municipio\": \"first\",\n",
+    "    \"area\": \"first\",\n",
+    "    \"data_ini\": \"max\",\n",
+    "    \"area_mq\": \"sum\",\n",
+    "    \"geometry\": group_geometry\n",
+    "})\n",
+    "gdf = gpd.GeoDataFrame(gdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "id": "20d81422",
    "metadata": {},
@@ -737,7 +762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -751,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
